--- a/0.プログラミングとは.md
+++ b/0.プログラミングとは.md
@@ -6,10 +6,10 @@
 
 プログラミングは主に以下のような目的があります。
 
-* ゲーム(グラフィック、物理演算、インターネット通信)
-* Webアプリ・スマホアプリ(インターネット通信、データベース操作)
-* 数値計算・数理最適化(AI、科学実験、Google検索エンジン)
-* 事務作業自動化・業務管理
+* ゲーム(グラフィック、物理演算、ネットワーク)
+* Webアプリ・スマホアプリ(ネットワーク、データベース)
+* 数値計算・数理最適化(AI、科学、検索エンジン)
+* 事務作業自動化・業務管理(ネットワーク、データベース)
 * など
 
 共通部分もありますが、それぞれ奥が深く途方もないのであまり大きな夢は見ないほうがいい。
