--- a/0.プログラミングのイメージ.md
+++ b/0.プログラミングのイメージ.md
@@ -14,7 +14,7 @@
 
 それぞれ共通部分もありますが、それぞれ奥が深く、途方もないのであまり大きな夢は見ないほうがいいです。
 
-* ゲーム業界は独特で、幅広い専門分野に触れる必要がある。
+* ゲーム業界は独特で、幅広い専門分野に触れる必要があります。
 * Web・スマホ系はアプリを簡単に作れるツールが用意されている場合が多いのでプログラミングを学ぶというよりはツールの使い方を学ぶほうに労力を使います。また、めちゃくちゃ奥が深いです。
 * 数値計算・数理最適化は大学レベルのザ・専門です。
 * 事務作業自動化・業務管理は、一般の人が日常的に触れることはあまり無く、影の部分ですが日本のIT企業の開発業務の半分以上は確実にコレです。基本的な知識と技能で足りることが多く、幅が広いです。また、ここからゲーム、Webの開発や最適化にもつながりやすいとは思うので入門にはぴったりだと思います。
