--- a/1.開発するもの.md
+++ b/1.開発するもの.md
@@ -16,19 +16,18 @@
 
 簡単な流れ
 
-1. GeForce ExperienceでゲームクリップをGoogle Driveに共有する。
+1. ゲームクリップをストレージサービスに共有する。
 2. 共有したクリップを「今日のクリップ」としてDiscordで通知する。
 3. アクション数を集計してランキングにする。
 4. トップ5までのクリップをつなげる。
 5. 投稿する。
 
-これを作ります。一人でも開発できるけどみんなにもプログラミングに触れてほしいみたいなところがある。
+これを作ります。一人でも開発できるけどみんなにもプログラミングに触れてほしいみたいなところがあります。
 
 ## 開発
 Kotlinというプログラミング言語を使います。
 
 ### Kotlin特徴
-* Androidアプリの開発において**Googleが推奨している**言語
 * 実用性を重視している
 * 「Javaより良いJava」がテーマ
 * Javaより簡潔で、プログラマーの知恵が詰まっている。
