--- a/3-1.プログラミング入門.md
+++ b/3-1.プログラミング入門.md
@@ -2,34 +2,30 @@
 
 プログラミングに対するイメージを「コッチ寄り」にするため、歴史について少し話します。流し読みで大丈夫です。
 
-コンピュータは「計算機」と呼ばれたりします。
-
 ### 1. 数値計算
 
-もともとは戦争の弾道計算や暗号解読などの複雑な計算のために開発されました。(1946年)
+もともとは弾道計算や暗号解読など、高速な計算をするために開発されました。(1946年. ENIAC.)
 
 ### 2. データの扱いと保存
 
-**二進法**が普及し、数と対応させます。二進法はやばいくらい早く繰り上がる数え方です。
+1946年のENIAC以降、**二進法**が普及し、それと数と対応させます。二進法とはやばいくらい早く繰り上がる数え方です。
 
 (0 → 1 -繰り上がり→ 10 → 11 -繰り上がり→ 100)
 
-数えられるので整数(1, 2, 3, ...)と簡単に対応します。
+数えられるので自然数(0, 1, 2, 3, ...)と簡単に対応します。
 
-また、効率的に計算するため「**メモリ**」という一時的にデータを保存する概念が生まれます。
+また、効率的に計算するため一時的にデータを保存する「**メモリ**」という概念が生まれます。
 
-戦後、ビジネスなどでの実用性を上げるため、「**ファイル**」という形でデータをまとめ、長期保存するようになります。
+戦後、さらに実用性を上げるため、「**ファイル**」という形でデータをまとめ、長期保存するようになります。
 
 ### 3. 数以外も扱う
 
 文字も扱いたいということで、二進法のデータをイイ感じに文字に対応させました。(1963年)
 
 例えば「A」という文字は「10000001」という二進法の(もはや数ではない)データと対応します。
-「10000001」は二進法で数えたら65番目ですが、これに「これは文字だよ」という情報を加えればそれは「**文字コード**」となり、コンピュータはそれを「A」と解釈します。
+「10000001」は二進法で数えたら65番目ですが、これに「これは文字だよ」と認識できるようにすればそれは「**文字コード**」となり、コンピュータはこれを「A」と解釈します。
 
-また、二進法のデータを**色**にも対応させます。こうしてグラフィックゲームが誕生しました。
-
-もちろん、文字や色などのデータもファイルという形でまとめることができます。(ここ重要)
+また、二進法のデータを**色**にも対応させました。これによってグラフィックゲームなども開発できるようになります。
 
 ### 今後
 
@@ -37,4 +33,4 @@
 
 「数の計算」→「データの保存」→「数以外のデータ」という流れを大切にしておいてください。
 
-この流れでプログラミングをガチ入門してみます。
+この流れでプログラミングを入門してみます。
