--- a/3-3.データの一時保存.md
+++ b/3-3.データの一時保存.md
@@ -8,17 +8,22 @@ fun main() {
     var brite = 700 + 17
     println(katekin)
     println(brite)
-    println(katekin + brite)
+    
+    val x = katekin + brite
+    println(x)
 }
 ```
 
-`val` や `var` という宣言によって、計算結果や値を保存して再利用することができます。(**変数への代入**)
+保存先、ここでは`katekin`と`brite`が**変数**と呼ばれ、中に値を入れます。(**変数への代入**)
 
-ここでは`katekin`と`brite`が**変数**と呼ばれ、中に値が入ります。
+`=`というのはイコールではなくあくまで代入を示します。最初は紛らわしいので`←`のようなものだと思うとイメージしやすいです。
+
+`val katekin ← 7000 + 586`
+
+`val` や `var` というのは、変数を宣言するためのキーワードです。
 
 valはvalue(値)の略です。varはvariable(変数)の略です。
 
-二つの違いは前者valが保存内容の変更不可で、後者varが変更可能を示します。
+二つの違いは前者valが**保存内容の変更不可**で、後者varが**変更可能**を示します。
 
-プログラマーと知恵として基本的に変更不可の方が安全なのでとりあえずvalを使ってください。
-
+プログラマーと知恵として基本的に変更不可の方が安全なので基本的にはvalを使ってください。
