--- a/3-4.数以外のデータ.md
+++ b/3-4.数以外のデータ.md
@@ -1,6 +1,6 @@
 ## 文字列
 
-`"`で囲むとそれは**文字列**を示します。
+`"`で囲んだものは**文字列**を示します。
 
 ```kotlin
 fun main() {
@@ -23,3 +23,7 @@ fun main() {
     print(vitamin + brite) // これはエラー!
 }
 ```
+
+## 色やデータ
+
+ここでは扱いませんが、存在することは頭の隅に置いといてください。
