--- a/1-2.プログラミングの歴史(コラム).md
+++ b/1-2.プログラミングの歴史(コラム).md
@@ -8,15 +8,15 @@
 
 ### 2. データの扱いと保存
 
-1946年のENIAC以降、**二進法**が普及し、それと数と対応させます。二進法とはやばいくらい早く繰り上がる数え方です。
+1946年のENIAC以降、**二進法**が普及し、普通の数と対応させます。二進法とはやばいくらい早く繰り上がる数え方です。
 
 (0 → 1 -繰り上がり→ 10 → 11 -繰り上がり→ 100)
 
-数えられるので自然数(0, 1, 2, 3, ...)と簡単に対応します。
+数えられるので自然数(0, 1, 2, 3, 4, ...)と簡単に対応します。
 
 また、効率的に計算するため一時的にデータを保存する「**メモリ**」という概念が生まれます。
 
-戦後、さらに実用性を上げるため、「**ファイル**」という形でデータをまとめ、長期保存するようになります。
+さらに実用性を上げるため、「**ファイル**」という形でデータをまとめ、長期保存するようになります。
 
 ### 3. 数以外も扱う
 
@@ -25,12 +25,14 @@
 例えば「A」という文字は「10000001」という二進法の(もはや数ではない)データと対応します。
 「10000001」は二進法で数えたら65番目ですが、これに「これは文字だよ」と認識できるようにすればそれは「**文字コード**」となり、コンピュータはこれを「A」と解釈します。
 
-また、二進法のデータを**色**にも対応させました。これによってグラフィックゲームなども開発できるようになります。
+また、二進法のデータを色にも対応させました。これによってグラフィックゲームなども開発できるようになります。
 
 ### 今後
 
-この歴史の
+ここで使っていた「データ」という名称はわかりやすさのために使っていましたが、ちょっとニュアンスが違うので、以降「値」という言葉を使います。
 
-「数の計算」→「データの保存」→「数以外のデータ」という流れを大切にしておいてください。
+また、この歴史の
+
+「数の計算」→「値の保存」→「数以外の値」という流れを大切にしておいてください。
 
 この流れでプログラミングを入門してみます。
