--- a/3-1.条件分岐(if).md
+++ b/3-1.条件分岐(if).md
@@ -27,7 +27,7 @@ end
 ifの横に置いた条件が真(true)なら、字下げしたところの処理が実行されます。
 条件が合致しなかった場合、`else`以降の字下げのところが実行されます。
 
-また以降、字下げ(**インデント**)があるような書き方には、最後に`end`というキーワードが付くのを覚えておいてください。
+また以降、字下げ(**インデント**)があるような書き方には、最後に`end`が付くのを覚えておいてください。
 
 ifの横に必要なのは真偽値なので、一旦変数に代入してから置くこともできます。
 
