--- a/3-3.処理の保存(関数,メソッド).md
+++ b/3-3.処理の保存(関数,メソッド).md
@@ -10,7 +10,7 @@ end
 
 `def`とは`define`の略で「定義」を意味します。名前の付いた処理を**関数**といいます。関数は専門用語っぽく、数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれます。
 
-しばしば、関数は何かしらの値を受け取ります。上の例では受け取った値は`x`に代入されます。関数で受け取った値の代入先の変数は  **引数(ひきすう)**  と呼ばれます。
+しばしば、関数は何かしらの値を受け取ります。上の例では受け取った値は`x`に代入されます。関数で受け取った値が代入される変数は  **引数(ひきすう)**  と呼ばれます。
 
 その後関数を**呼び出す**と、字下げのところが実行されます。
 
