--- a/4-2.課題.md
+++ b/4-2.課題.md
@@ -1,4 +1,4 @@
-『クリップ集自動作成ツール』を開発するうえで、以下のことはできるようになっていて欲しいです。
+『クリップ集自動作成ツール』を開発するうえで、以下のことはできるようになっていて欲しいです。うまくググりながらやってみてください。
 
 1. Rubyでのファイルの読み込み、書き込み、移動、コピー。
 2. 条件分岐や繰り返しを利用して、ファイルの保存先を制御する。
