--- a/2-0.開発ツール.md
+++ b/2-0.開発ツール.md
@@ -4,6 +4,9 @@
 
 以下をインストールしてください。
 
-VSCode, Ruby
+* エディター
+    * Visual Studio Code(VSCode)(https://azure.microsoft.com/ja-jp/products/visual-studio-code/)
+* プログラミング言語
+    * Ruby(https://rubyinstaller.org/)
 
 参考ページ: https://prog-8.com/docs/ruby-env-win
