--- a/2-1.動作確認.md
+++ b/2-1.動作確認.md
@@ -2,10 +2,22 @@
 
 動作確認です。
 
-呪文のようですがコピペして実行してください。
+https://prog-8.com/docs/ruby-env-win
+
+上記のページを参考に作業用フォルダを作成し、Visual Studio Codeでそのフォルダを開いて
+
+`test.rb`という名前(好きな名前でOK)のファイルを作成してください。
+
+また、そのファイル内に以下の呪文のようなコードをコピペしてください。
 
 ```ruby
 puts "Hello, World!"
+```
+
+そして上記のページを参考に、以下のコマンドを実行します。
+
+```sh
+ruby test.rb
 ```
 
 `Hello, World!`が表示されましたかね？
