--- a/3-2.繰り返し.md
+++ b/3-2.繰り返し.md
@@ -2,19 +2,21 @@
 
 プログラミングのもう一つの肝は繰り返しです。この辺りから難易度が上がるかもしれません。
 
+## for
+
 ```ruby
 for x in 1..3
   puts x
 end
 ```
 
-`for`は「間」という意味がありますね。上のプログラムでは、1から3の範囲で字下げの部分が繰り返し実行されます。
+`for X in S`は「Sの**中の**要素Xに**対して**～」みたいな訳し方ができます。この言い回しは数学チックですね。
 
-ここでは x という変数に1から3を順番に代入します。
+上のコードでは、1から3の範囲の整数を順番に`x`という名前の変数に代入し、字下げの部分の処理を実行します。
 
 また、字下げがあるので最後に`end`が必要です。
 
-いままで学んだやつを使ってみましょう。
+いままで学んだやつを組み合わせてみましょう。
 
 ```ruby
 brite = 717
@@ -39,6 +41,6 @@ for x in 1...100
 end
 ```
 
-`%`は割り算のあまりを求める演算子です。`x % 2 == 0`とすることで、2で割り切れるかどうか(= 偶数かどうか)を判定することができます。
+`%`は割り算のあまりを求める演算子です。`x % 2 == 0`とすることで、xが2で割り切れるかどうか(= 偶数かどうか)を判定することができます。
 
 うまく読めますかね？
