--- a/4-1.おわりに.md
+++ b/4-1.おわりに.md
@@ -1,10 +1,12 @@
 以上が肝の部分でした。
 
-これまで紹介してきたものをレゴのように組み合わせることで、それがアプリケーションやソフトウェアとなります。
+他にも大切な概念がたくさんあります。
 
-関数、分岐、繰り返しをどう組み合わせるかを考えるのが創造的なところで、おもしろいところです。
+これらをレゴのように組み合わせることで、アプリケーションやソフトウェアをつくることができます。
 
-これ以上の解説を作るのはとても時間が足りないので、イイ感じのサイトで学んでください
+関数、分岐、繰り返しをどう組み合わせるかを考えるところが創造的なところで、おもしろいところです。
+
+これ以上の解説を作るにはとても時間が足りないので、イイ感じのサイトで学んでください
 
 おすすめ
 
