--- a/2-4.数以外の値.md
+++ b/2-4.数以外の値.md
@@ -1,3 +1,7 @@
+# 数以外の値
+
+数以外にもいろいろな値を利用することができます。
+
 ## 文字列
 
 `"`で囲んだものは**文字列**を示します。
@@ -9,6 +13,13 @@ vitamin = "ビタミン"
 
 puts katekin + brite
 puts vitamin
+```
+
+Rubyでの文字列にとっての`+`は、「文字列の結合」を意味します。
+
+```ruby
+vitamin = "ビタミン"
+puts vitamin + "さん"
 ```
 
 文字列と数値の二つを使って計算することはできません。
