--- a/3-2.繰り返し.md
+++ b/3-2.繰り返し.md
@@ -1,6 +1,6 @@
-## 繰り返し
+# 繰り返し
 
-プログラミングのもう一つの肝は繰り返しです。反復とも呼ばれます。この辺りから難易度が上がるかもしれません。
+プログラミングのもう一つの肝は繰り返しです。**反復**とも呼ばれます。この辺りから難易度が上がるかもしれません。
 
 ## for
 
