--- a/1-2.プログラミングの歴史.md
+++ b/1-2.プログラミングの歴史.md
@@ -1,12 +1,12 @@
-## 本来のコンピュータと歴史
+# 本来のコンピュータと歴史
 
 プログラミングに対するイメージを「コッチ寄り」にするため、歴史について少し話します。流し読みで大丈夫です。
 
-### 1. 数値計算
+## 1. 数値計算
 
 もともとは弾道計算や暗号解読など、高速な計算をするために開発されました。(1946年. ENIAC.)
 
-### 2. データの扱いと保存
+## 2. データの扱いと保存
 
 1946年のENIAC以降、**二進法**が普及し、普通の数と対応させます。二進法とはやばいくらい早く繰り上がる数え方です。
 
@@ -18,7 +18,7 @@
 
 さらに実用性を上げるため、「**ファイル**」という形でデータをまとめ、長期保存するようになります。
 
-### 3. 数以外も扱う
+## 3. 数以外も扱う
 
 文字も扱いたいということで、二進法のデータをイイ感じに文字に対応させました。(1963年)
 
@@ -27,7 +27,7 @@
 
 また、二進法のデータを色にも対応させました。これによってグラフィックゲームなども開発できるようになります。
 
-### 今後
+## 今後
 
 ここで使っていた「データ」という名称はわかりやすさのために使っていましたが、ちょっとニュアンスが違うので、以降「値」という言葉を使います。
 
