--- a/2-1.動作確認.md
+++ b/2-1.動作確認.md
@@ -1,21 +1,17 @@
 # 動作確認
 
-動作確認です。
+ここでは動作確認を行います。ここを達成できるとかなりの前進となるので頑張ってください。
 
-https://prog-8.com/docs/ruby-env-win
+気軽に声をかけてください。
 
-上記のページを参考に作業用フォルダを作成し、Visual Studio Codeでそのフォルダを開いて
-
-`test.rb`という名前(好きな名前でOK)のファイルを作成してください。
-
-また、そのファイル内に以下の呪文のようなコードをコピペしてください。
-
+1. 下記のページを参考に作業用フォルダを作成し、Visual Studio Codeでそのフォルダを開いてください。
+    * https://prog-8.com/docs/ruby-env-win
+2. `test.rb`という名前(好きな名前でOK)のファイルをそのフォルダ内に作成してください。
+3. そのファイル内に以下のコードをコピペしてください。
 ```ruby
 puts "Hello, World!"
 ```
-
-そして上記のページを参考に、以下のコマンドを実行します。
-
+4. そして上記のページを参考に、以下のコマンドを実行します。
 ```sh
 ruby test.rb
 ```
