--- a/2-3.値の保存.md
+++ b/2-3.値の保存.md
@@ -1,6 +1,6 @@
-# メモリへの一時保存
+# 値の保存
 
-計算結果をメモリに保存してみます。
+計算結果を一時的に保存してみます。
 
 ```ruby
 katekin = 7000 + 586
@@ -13,9 +13,17 @@ x = katekin + brite
 puts x
 ```
 
-`katekin`と`brite`という**名前**が、値の保存先です。「名前の付いた値」と捉えてもいいです。そういう名前の付いた値のことを**変数**と呼びます。
+`7000 + 586`という計算結果は`katekin`という**名前**になりました。
 
-変数は値を一時的にメモリに保存(保持)するために使われます。変数に値を保持させる操作は**代入**と言います。
+また、`700 + 17`という計算結果は`brite`という名前になりました。
+
+この`katekin`と`brite`はそれぞれどういう値だと思いますか？また、後に出てくる`x`はどういう値だと思いますか？
+
+`katekin`と`brite`のように、値が*入る*(※)名前のことを**変数**と呼びます。
+
+(※ ここ伝わる...? 変数を「名前が書いてある箱」とたとえる入門書はよく見かけます。)
+
+変数に値を入れることを**代入**と言います。
 
 `=`というのはイコールではなく、あくまで**代入**を示します。最初は紛らわしいですが`←`のようなものだと思うとイメージしやすいです。
 
