--- a/2-4.数以外の値.md
+++ b/2-4.数以外の値.md
@@ -15,7 +15,7 @@ puts katekin + brite
 puts vitamin
 ```
 
-Rubyでの文字列にとっての`+`は、「文字列の結合」を意味します。
+Rubyにおいて、文字列に対する`+`は、「文字列の結合」を意味します。
 
 ```ruby
 vitamin = "ビタミン"
@@ -54,7 +54,7 @@ puts brite == 717
 puts vitamin < 1000
 ```
 
-もちろん、これも値なのでメモリに保存(変数に代入)することができます。
+もちろん、これも値なので変数に代入することができます。
 
 ```ruby
 a = katekin > 1000
