--- a/3-3.処理の保存.md
+++ b/3-3.処理の保存.md
@@ -1,6 +1,6 @@
 # 関数、メソッド
 
-プログラミングでは処理にすら名前を付け、メモリに保存することができます。これも肝です。
+プログラミングでは処理にすら名前を付けることができます。これも肝です。
 
 ```ruby
 def plus_katekin_power(x)
@@ -8,13 +8,13 @@ def plus_katekin_power(x)
 end
 ```
 
-`def`とは`define`の略で「定義」を意味します。この定義によって、処理に名前を付けます。
+`def`とは`define`の略で「定義」を意味します。この定義によって、処理に名前を付けられます。
 
-名前の付いた処理を**関数**といいます。関数は専門用語っぽく、数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれます。
+名前の付いた処理を**関数**といいます。関数は数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれます。
 
 しばしば、関数は何かしらの値を受け取ります。上の例では受け取った値は変数`x`に代入されます。この`x`のように、受け取った値が代入される変数を **引数(ひきすう)** といいます。
 
-その後関数を**呼び出す**と、字下げのところが実行されます。
+その後関数を以下のように**呼び出す**と、字下げのところが実行されます。
 
 そして、最後の処理結果が**返されます**。返される値は**戻り値**といいます。
 
@@ -24,5 +24,6 @@ def plus_katekin_power(x)
 end
 
 brite = 717
-puts plus_katekin_power(brite)
+power = plus_katekin_power(brite)
+puts power
 ```
