--- a/2-1.動作確認.md
+++ b/2-1.動作確認.md
@@ -2,7 +2,7 @@
 
 ここでは動作確認を行います。ここを達成できるとかなりの前進となるので頑張ってください。
 
-気軽に声をかけてください。
+わからなければ気軽に声をかけてください。
 
 1. 下記のページを参考に作業用フォルダを作成し、Visual Studio Codeでそのフォルダを開いてください。
     * https://prog-8.com/docs/ruby-env-win
