Add Images and improve contents

--- a/1-1.プログラミングの歴史.md
+++ b/1-1.プログラミングの歴史.md
@@ -1,23 +1,30 @@
-# コンピュータと歴史
+# コンピュータの歴史
 
 ## 1. 数値計算
 
-もともとは弾道計算や暗号解読など、数の高速な計算をするために開発されました。(1946年. ENIAC.)
+もともとは高速な計算をする目的が大きかったです。
+
+↓昔のクソでかコンピュータ。メモリはわずか。
+
+* Colossus(コロッサス) - 暗号解読. 1944年
+<img src="images/Colossus.jpg">
+
+* ENIAC(エニアック) - 弾道計算・微分方程式. 1946年
+<img src="images/Eniac.jpg">
+
+* EDVAC(エドバック) - ENIACの進化版。弾道計算・微分方程式. 1951年
+<img src="images/800px-Edvac.jpg">
 
 ## 2. データの保存
 
-効率的に計算するため一時的にデータを保存する「**メモリ**」という概念が生まれました。
-
-さらに実用性を上げるため、長期保存をする「**ファイル**」や「**ストレージ**」という概念も生まれました。
+コンピュータに欠かせないのは、一時的にデータを保存する「**メモリ**」という概念です。一時的にデータを保存すると効率的な計算ができるからです。上にあげたコンピュータもわずかながらメモリと言える仕組みがありました。
 
 ## 3. 数以外も扱う
 
-文字も扱えればデータをわかりやすく扱えるということで、文字のデータ(**文字コード**)を作りました。(1963年)
-
-また、色や画像、音もデータ化しました。これによってグラフィックゲームなども開発できるようになります。
+昔のコンピュータは計算がメインでしたが、利便性を高めるため、文字、色などの数値以外もデータ化し、扱えるようになりました。
 
 ---
 
-後ろにいけばいくほど先人の知恵が凝縮されているので、理解するには難しい話になっていきます。
+第2章では、単純な計算、メモリへの一時保存、数値以外の扱いを体験します。
 
-なのでここで学ぶとき、「数の計算」→「値の保存」→「数以外の値」という流れで取り組んでいきます。
+第3章では、上記のコンピュータの高速な計算を支えた仕組みであるプログラミングの肝(条件、繰り返し、サブルーチン)を体験します。
