--- a/1.はじめに.md
+++ b/1.はじめに.md
@@ -1,3 +1,3 @@
 # 第1章. はじめに
 
-プログラミングを学ぶとき、その歴史に沿いながら学ぶとわかりやすいので軽く歴史に触れます。
+プログラミングの勉強は最初は難しそうというイメージがありますね。実際最初はつまらないです。というのも最初は昔のコンピュータがやってたようなことしか学ばないからです。ですが昔のコンピュータをすこし知っておくと学びやすいと思うので軽く歴史に触れます。
