--- a/2-1.動作確認.md
+++ b/2-1.動作確認.md
@@ -1,8 +1,8 @@
 # 動作確認
 
-ここでは動作確認を行います。ここを達成できるとかなりの前進となるので頑張ってください。
+ここでは動作確認を行います。ここを達成できるとかなりの前進なので頑張ってください。
 
-わからなければ気軽に声をかけてください。
+(こんぺいとうコメント: わからなければ気軽に声かけて。)
 
 1. 下記のページを参考に作業用フォルダを作成し、Visual Studio Codeでそのフォルダを開いてください。
     * https://prog-8.com/docs/ruby-env-win
