--- a/2-2.数の計算.md
+++ b/2-2.数の計算.md
@@ -2,7 +2,7 @@
 
 # 計算
 
-試しに数の計算をします。
+試しに数の単純な計算をします。
 
 では、putsの横に`1`を置いて実行してください。
 
@@ -12,6 +12,8 @@ puts 1
 
 `1`が表示されましたかね？
 
+`puts`は、値を横に置くとそれを表示してくれる機能です。
+
 `1`を`7000 + 586`に置き替えてもう一回実行してください。
 
 ```ruby
@@ -20,8 +22,14 @@ puts 7000 + 586
 
 計算してくれることを試しました。
 
-`puts`は、値を横に置くとそれを表示してくれる機能です。
+こんな計算もできます。`*`は掛け算です。
 
-その他乗算や除算など計算については以下が参考になります。
+```ruby
+puts 1000000 + (7000 + 586) * 2 
+```
+
+(こんぺいとうコメント: このあたりやっても「はぁ…そうですか」って感じだけど基本的なことなんで許してください。)
+
+その他の演算子については以下が参考になります。
 
 https://www.tohoho-web.com/ruby/operators.html
