--- a/2-3.値の保存.md
+++ b/2-3.値の保存.md
@@ -1,5 +1,7 @@
 # 値の保存
 
+## 名付ける
+
 計算結果を一時的に保存してみます。
 
 ```ruby
@@ -13,20 +15,29 @@ x = katekin + brite
 puts x
 ```
 
-`7000 + 586`という計算結果は`katekin`という**名前**になりました。
+`7000 + 586`という計算結果は`katekin`と**名付け**ました。
 
-また、`700 + 17`という計算結果は`brite`という名前になりました。
+また、`700 + 17`という計算結果は`brite`と**名付け**ました。
 
-この`katekin`と`brite`はそれぞれどういう値だと思いますか？また、後に出てくる`x`はどういう値だと思いますか？
-
-`katekin`と`brite`のように、値が*入る*(※)名前のことを**変数**と呼びます。
-
-(※ ここ伝わる...? 変数を「名前が書いてある箱」とたとえる入門書はよく見かけます。)
-
-変数に値を入れることを**代入**と言います。
-
-`=`というのはイコールではなく、あくまで**代入**を示します。最初は紛らわしいですが`←`のようなものだと思うとイメージしやすいです。
+`=`というのはイコールという意味ではないです。最初は紛らわしいですが`←`のようなものだと思うとイメージしやすいです。
 
 `katekin ← 7000 + 586`
 
-値を一時的に保存できるというのはプログラミングの肝の一つです。
+こういうふうに**名付ける**ことによってデータを**メモリに保存**します。
+
+この`katekin`と`brite`はそれぞれどういう値だと思いますか？また、後に出てくる`x`はどういう値だと思いますか？
+
+(こんぺいとうコメント: 実行する前に考えて、当たってたら嬉しい気がする。)
+
+## 変数
+
+`katekin`や`brite`、`x`のような名札のようなもののことを**変数**と呼びます。
+
+また、名札(変数)に対して値を割り当てることを「変数に値を**代入する**」といいます。
+
+* 変数katekinに7000 + 586の結果を**代入する**
+```ruby
+katekin = 7000 + 586
+```
+
+(こんぺいとうコメント: 変数への代入(メモリへの保存)は結構プログラミングの肝なんですよねぇ)
