--- a/2-4.数以外の値.md
+++ b/2-4.数以外の値.md
@@ -66,8 +66,8 @@ puts a
 
 https://www.tohoho-web.com/ruby/operators.html
 
-## 色、映像、音
+## 色、音
 
-ここでは扱いませんが、存在することは頭の隅に置いといてください。
+ここでは扱いませんが、データとして存在することは頭の隅に置いといてください。
 
 次回は、プログラミングの肝を三つ紹介します。
