--- a/3-2.繰り返し.md
+++ b/3-2.繰り返し.md
@@ -4,13 +4,15 @@
 
 ## for
 
+繰り返しで代表的なのは`for`です。
+
 ```ruby
 for x in 1..3
   puts x
 end
 ```
 
-`for X in S`は「Sの**中の**要素Xに**対して**～」みたいな訳し方ができます。この言い回しは数学チックですね。
+`for X in S`は「Sの**中の**要素Xに**対して**～」みたいな訳し方ができます。
 
 上のコードでは、1から3の範囲の整数を順番に`x`という名前の変数に代入し、字下げの部分の処理を実行します。
 
@@ -43,4 +45,4 @@ end
 
 `%`は割り算のあまりを求める演算子です。`x % 2 == 0`とすることで、xが2で割り切れるかどうか(= 偶数かどうか)を判定することができます。
 
-うまく読めますかね？
+上のコードはどんな動きをするでしょう？うまく読めますかね？
