--- a/3-3.処理の保存.md
+++ b/3-3.処理の保存.md
@@ -8,13 +8,15 @@ def plus_katekin_power(x)
 end
 ```
 
-`def`とは`define`の略で「定義」を意味します。この定義によって、処理に名前を付けられます。
+`def`とは`define`の略で「定義」を意味します。処理に名前を付けることは「処理を定義する」とも解釈できます。
 
-名前の付いた処理を**関数**といいます。関数は数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれます。
+名前の付いた処理を**関数**や**サブルーチン**といったりします。関数は数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれたりします。ここでは関数と呼ばせてください。
 
-しばしば、関数は何かしらの値を受け取ります。上の例では受け取った値は変数`x`に代入されます。この`x`のように、受け取った値が代入される変数を **引数(ひきすう)** といいます。
+しばしば関数は何かしらの値を受け取ります。受け取った値を利用することで処理にバリエーションが生まれます。
 
-その後関数を以下のように**呼び出す**と、字下げのところが実行されます。
+上の関数`plus_katekin_power`では、値を一つ受け取り、それが`x`に代入されます。xのような、値を受け取る変数を **引数(ひきすう)** といいます。
+
+関数を以下のように**呼び出す**と、字下げのところが実行されます。
 
 そして、最後の処理結果が**返されます**。返される値は**戻り値**といいます。
 
@@ -24,6 +26,6 @@ def plus_katekin_power(x)
 end
 
 brite = 717
-power = plus_katekin_power(brite)
+power = plus_katekin_power(brite) # 関数の「呼び出し」
 puts power
 ```
