--- a/4-2.課題.md
+++ b/4-2.課題.md
@@ -1,6 +1,5 @@
-『クリップ集自動作成ツール』を開発するうえで、以下のことはできるようになっていて欲しいです。うまくググりながらやってみてください。
+# 課題
 
-1. Rubyでのファイルの読み込み、書き込み、移動、コピー。
-2. 条件分岐や繰り返しを利用して、ファイルの保存先を制御する。
+以降は、開発にあたって必要なプログラミングスキルを身に着けるための課題を載せます。
 
-具体的な宿題はまた今度書きます。
+声をかけていただければ、一緒に取り組みます。
