--- a/解答.4-3.課題.ファイル操作.md
+++ b/解答.4-3.課題.ファイル操作.md
@@ -138,7 +138,6 @@ classify_clips_for_rank("1.Queue", result)
 ## 問5
 
 ```ruby
-# ==-- 問5 --==
 def classify_clips_for_rank_with_revenge(srcs, result)
     # ソート(likeの降順, fileの昇順)
     sorted_clips = srcs
@@ -179,9 +178,6 @@ classify_clips_for_rank_with_revenge(["1.Queue", "2.Revenging"], result)
 
 ---
 
-## TODO
+上記をまとめて改善したソース
 
-Clipクラスに元のフォルダ情報を保持する必要ありかも。あとファイルを移動するmoveメソッドを入れてもいい気もする。
-
-いいね数をもとに仕分け先フォルダを返すメソッドがあると良いと思う。もしくは仕分け用のクラス(`ClipClassifier`的な)
-
+https://github.com/R3Dx-creative/clip-ranking/tree/main/playground/clip
