解答の改善

--- a/4-3.課題.ファイル操作.md
+++ b/4-3.課題.ファイル操作.md
@@ -148,7 +148,7 @@ result = {
 
 ## 問4(難易度: ★★★★☆)
 
-問3の「仕様」を以下に置き換えて、`1.Queue`フォルダ内のファイルを仕分けるプログラムをRubyで書いてください。
+問3の「仕様」を以下に置き換えて、`1.Queue`フォルダ内のファイルを仕分けるプログラムをRubyで書いてください。(普通に難しいので数日悩むかも)
 
 ### (前提)
 
@@ -176,7 +176,7 @@ result = {
 
 ## 問5(難易度: ★★★★☆)
 
-問4と同じ仕様で、`1.Queue`と`2.Revenging`のフォルダ内のファイルを仕分けるプログラムをRubyで書いてください。
+問4と同じ仕様で、`1.Queue`と`2.Revenging`のフォルダ内のファイルを仕分けるプログラムをRubyで書いてください。(普通に難しいので数日悩むかも)
 
 ### (前提)
 
@@ -198,4 +198,4 @@ result = {
 
 ---
 
-おつかれさまでした。ここまでできたら普通にすごい。
+ここまでできたら普通にすごい。
