--- a/解答.4-3.課題.ファイル操作.md
+++ b/解答.4-3.課題.ファイル操作.md
@@ -26,7 +26,6 @@ move_file("0.Shared", "1.Queue")
 ## 問2
 
 ```ruby
-
 def ranked_dir(date)
   # 任意の日付(Date型)のファイル名(Ranked.yyyy-MM-dd)を作成
   date_str = date.strftime("%Y-%m-%d")
@@ -52,18 +51,13 @@ result = {
   "6.txt" => 1
 }
 
-# ランク外かの判定
-def unranked?(like)
-  like < BORDER
-end
-
 # 仕分け(集計元, 集計結果)
 def classify(src, result)
   Dir.each_child(src) do |file|
-    if unranked?(result[file])
-      FileUtils.move("#{src}/#{file}", "3.Unranked")
-    elsif
+    if result[file] >= BORDER
       FileUtils.move("#{src}/#{file}", "2.Revenging")
+    else
+      FileUtils.move("#{src}/#{file}", "3.Unranked")
     end
   end
 end
@@ -72,7 +66,20 @@ classify("1.Queue", result)
 
 ## 問3(クラス使用バージョン)
 ```ruby
-# クラス使用バージョン
+# 基準
+BORDER = 5
+
+# 集計結果
+result = {
+  "0.txt" => 0,
+  "1.txt" => 5,
+  "2.txt" => 5,
+  "3.txt" => 6,
+  "4.txt" => 7,
+  "5.txt" => 5,
+  "6.txt" => 1
+}
+
 class Clip
   attr_reader :file, :like
 
@@ -81,8 +88,8 @@ class Clip
     @like = like
   end
 
-  def unranked?
-    @like < BORDER
+  def move(dest)
+    FileUtils.move(@file, dest)
   end
 
   def self.clips(src, result)
@@ -92,92 +99,241 @@ end
 
 def classify_clips(src, result)
   Clip.clips(src, result).each do |clip|
-    if clip.unranked?
-      FileUtils.move(clip.file, "3.Unranked")
-    elsif
-      FileUtils.move(clip.file, "2.Revenging")
+    if clip.like >= BORDER
+      clip.move("2.Revenging")
+    else
+      clip.move("3.Unranked")
     end
   end
 end
+
 classify_clips("1.Queue", result)
 ```
 
 ## 問4
 
 ```ruby
-def classify_clips_for_rank(src, result)
-  # ソート(likeの降順, fileの昇順)
-  sorted_clips = Clip.clips(src, result).sort { |a, b| 
-    [-a.like, a.file] <=> [-b.like, b.file]
-  }
+# 基準
+BORDER = 5
+
+# ランキング
+RANKING = 3
+
+# 集計結果
+result = {
+  "0.txt" => 0,
+  "1.txt" => 5,
+  "2.txt" => 5,
+  "3.txt" => 6,
+  "4.txt" => 7,
+  "5.txt" => 5,
+  "6.txt" => 1
+}
+
+# 問2のやつ
+def ranked_dir(date)
+  # 任意の日付(Date型)のファイル名(Ranked.yyyy-MM-dd)を作成
+  date_str = date.strftime("%Y-%m-%d")
+  "Ranked.#{date}"
+end
+
+class Clip
+  attr_reader :file, :like
+
+  def initialize(file, like)
+    @file = file
+    @like = like
+  end
+
+  def move(dest)
+    FileUtils.move(@file, dest)
+  end
+
+  def self.clips(src, result)
+    Dir.each_child(src).map { |file| Clip.new("#{src}/#{file}", result[file]) }
+  end
+end
+
+def classify_clips(src, result)
+  sorted_clips = Clip.clips(src, result).sort_by { |clip| [-clip.like, clip.file] }
 
   # 今日のランキングフォルダ
   today_dir = ranked_dir(Date.today)
-  if !Dir.exist?(today_dir)
+  unless Dir.exist?(today_dir)
     FileUtils.mkdir(today_dir)
   end
 
-  # トップ3を格納
-  sorted_clips[0...3].each do |clip|
-    FileUtils.move(clip.file, today_dir)
-  end
-
-  # その他の仕分け
-  n = sorted_clips.size
-  sorted_clips[3...n].each do |clip|
-    if clip.unranked?
-      FileUtils.move(clip.file, "3.Unranked")
-    elsif
-      FileUtils.move(clip.file, "2.Revenging")
+  sorted_clips.each_with_index do |clip, i|
+    if i < RANKING
+      clip.move(today_dir)
+    elsif clip.like >= BORDER
+      clip.move("2.Revenging")
+    else
+      clip.move("3.Unranked")
     end
   end
 end
-classify_clips_for_rank("1.Queue", result)
+
+classify_clips("1.Queue", result)
+```
+
+問3(クラスバージョン)との差分
+
+```diff
++# ランキング
++RANKING = 3
+
++def ranked_dir(date)
++  # 任意の日付(Date型)のファイル名(Ranked.yyyy-MM-dd)を作成
++  date_str = date.strftime("%Y-%m-%d")
++  "Ranked.#{date}"
++end
+
+(省略)
+
+def classify_clips(src, result)
++  sorted_clips = Clip.clips(src, result).sort_by { |clip| [-clip.like, clip.file] }
+
++  # 今日のランキングフォルダ
++  today_dir = ranked_dir(Date.today)
++  unless Dir.exist?(today_dir)
++    FileUtils.mkdir(today_dir)
++  end
+
+-  Clip.clips(src, result).each do |clip|
++  sorted_clips.each_with_index do |clip, i|
++    if i < RANKING
++      clip.move(today_dir)
+-    if clip.like >= BORDER
++    elsif clip.like >= BORDER
+      clip.move("2.Revenging")
+    else
+      clip.move("3.Unranked")
+    end
+  end
+end
+
+(省略)
 ```
 
 ## 問5
 
 ```ruby
-def classify_clips_for_rank_with_revenge(srcs, result)
-    # ソート(likeの降順, fileの昇順)
-    sorted_clips = srcs
-    .map{ |src| Clip.clips(src, result) }
-    .flatten
-    .sort { |a, b| 
-      [-a.like, a.file] <=> [-b.like, b.file]
-    }
-  
-    # 今日のランキングフォルダ
-    today_dir = ranked_dir(Date.today)
-    if !Dir.exist?(today_dir)
-      FileUtils.mkdir(today_dir)
-    end
-  
-    # トップ3を格納
-    sorted_clips[0...3].each do |clip|
-      FileUtils.move(clip.file, today_dir)
-    end
-  
-    # その他の仕分け
-    n = sorted_clips.size
-    sorted_clips[3...n].each do |clip|
-      if clip.unranked?
-        FileUtils.move(clip.file, "3.Unranked")
-      elsif
-        begin
-          FileUtils.move(clip.file, "2.Revenging")
-        rescue => error
-          puts "same file"
-        end
-      end
-    end
+# 基準
+BORDER = 5
+
+# ランキング
+RANKING = 3
+
+# 集計結果
+result = {
+  "0.txt" => 0,
+  "1.txt" => 5,
+  "2.txt" => 5,
+  "3.txt" => 6,
+  "4.txt" => 7,
+  "5.txt" => 5,
+  "6.txt" => 1
+}
+
+def ranked_dir(date)
+  # 任意の日付(Date型)のファイル名(Ranked.yyyy-MM-dd)を作成
+  date_str = date.strftime("%Y-%m-%d")
+  "Ranked.#{date}"
 end
 
-classify_clips_for_rank_with_revenge(["1.Queue", "2.Revenging"], result)
+class Clip
+  attr_reader :file, :like
+
+  def initialize(dir, file, like)
+    @dir = dir
+    @file = file
+    @like = like
+  end
+
+  def move(dest)
+    if @dir == dest
+      return
+    end
+    FileUtils.move("#{@dir}/#{@file}", dest)
+  end
+
+  def self.clips(src, result)
+    Dir.each_child(src).map { |file| Clip.new(src, file, result[file]) }
+  end
+end
+
+def classify_clips(srcs, result)
+  sorted_clips = srcs
+    .map { |src| Clip.clips(src, result) }
+    .flatten
+    .sort_by { |clip| [-clip.like, clip.file] }
+
+  # 今日のランキングフォルダ
+  today_dir = ranked_dir(Date.today)
+  unless Dir.exist?(today_dir)
+    FileUtils.mkdir(today_dir)
+  end
+
+  sorted_clips.each_with_index do |clip, i|
+    if i < RANKING
+      clip.move(today_dir)
+    elsif clip.like >= BORDER
+      clip.move("2.Revenging")
+    else
+      clip.move("3.Unranked")
+    end
+  end
+end
+
+classify_clips(["1.Queue", "2.Revenging"], result)
+```
+
+問4との差分
+
+```diff
+(省略)
+
+class Clip
+  attr_reader :file, :like
+-  def initialize(file, like)
++  def initialize(dir, file, like)
++    @dir = dir
+    @file = file
+    @like = like
+  end
+
+  def move(dest)
++    if @dir == dest
++      return
++    end
+-    FileUtils.move(@file, dest)
++    FileUtils.move("#{@dir}/#{@file}", dest)
+  end
+
+  def self.clips(src, result)
+-    Dir.each_child(src).map { |file| Clip.new("#{src}/#{file}", result[file]) }
++    Dir.each_child(src).map { |file| Clip.new(src, file, result[file]) }
+  end
+end
+
+-def classify_clips(src, result)
++def classify_clips(srcs, result)
+-  sorted_clips = Clip.clips(src, result).sort_by { |clip| [-clip.like, clip.file] }
++  sorted_clips = srcs
++    .map { |src| Clip.clips(src, result) }
++    .flatten
++    .sort_by { |clip| [-clip.like, clip.file] }
+
+  (省略)
+end
+
+-classify_clips("1.Queue", result)
++classify_clips(["1.Queue", "2.Revenging"], result)
 ```
 
 ---
 
-上記をまとめて改善したソース
+上記を改善したソース
 
 https://github.com/R3Dx-creative/clip-ranking/tree/main/playground/clip
