--- a/1-1.コンピュータの歴史.md
+++ b/1-1.コンピュータの歴史.md
@@ -1,15 +1,17 @@
 # コンピュータの歴史
 
+コンピュータの歴史からプログラミングの概要に触れます。
+
 ## 1. 数値計算
 
-もともとは高速な計算をする目的が大きかったです。
+もともとは高速な計算をする目的で開発されました。
 
-↓昔のクソでかコンピュータ。メモリはわずか。
+↓昔のクソでかコンピュータ。メモリはわずかしかない。
 
-* Colossus(コロッサス) - 暗号解読. 1944年
+* Colossus(コロッサス) - **暗号解読**. 1944年
 <img src="images/Colossus.jpg">
 
-* ENIAC(エニアック) - 弾道計算・微分方程式. 1946年
+* ENIAC(エニアック) - **弾道計算**・微分方程式. 1946年
 <img src="images/Eniac.jpg">
 
 * EDVAC(エドバック) - ENIACの進化版。弾道計算・微分方程式. 1951年
@@ -17,7 +19,7 @@
 
 ## 2. データの保存
 
-コンピュータに欠かせないのは、一時的にデータを保存する「**メモリ**」という概念です。一時的にデータを保存すると効率的な計算ができるからです。上にあげたコンピュータもわずかながらメモリと言える仕組みがありました。
+コンピュータによる高速計算に欠かせないのは、一時的にデータを保存する「**メモリ**」という概念です。一時的にデータを保存すると一度計算した結果を再利用できるので効率的な計算が可能になります。上にあげたコンピュータもわずかながらメモリと言える仕組みがありました。
 
 ## 3. 数以外も扱う
 
@@ -25,6 +27,6 @@
 
 ---
 
-第2章では、単純な計算、メモリへの一時保存、数値以外の扱いを体験します。
+第2章では、単純な計算、値の保存、数値以外の値を体験します。
 
 第3章では、上記のコンピュータの高速な計算を支えた仕組みであるプログラミングの肝(条件、繰り返し、サブルーチン)を体験します。
