--- a/1.はじめに.md
+++ b/1.はじめに.md
@@ -1,3 +1,5 @@
 # 第1章. はじめに
 
-プログラミングの勉強は最初は難しそうというイメージがありますね。実際最初はつまらないです。というのも最初は昔のコンピュータがやってたようなことしか学ばないからです。ですが昔のコンピュータをすこし知っておくと学びやすいと思うので軽く歴史に触れます。
+プログラミングの勉強は最初は難しそうというイメージがありますね。実際は難しいというか、最初はつまらないです(「はぁ・・・で？」という感想を抱きがちです)。というのも知っておくべき初歩的な知識の量が割と多く、しかもそれが昔のコンピュータがやってたようなことだからです。
+
+昔のコンピュータを少し知って、期待外れな気持ちを軽減すると学びやすいと思うので軽く歴史に触れます。
