--- a/2-4.数以外の値.md
+++ b/2-4.数以外の値.md
@@ -4,7 +4,7 @@
 
 ## 文字列
 
-`"`で囲んだものは**文字列**を示します。
+二つの`"`で囲んだ値は**文字列**を示します。
 
 ```ruby
 katekin = 7000 + 586
@@ -37,7 +37,7 @@ puts vitamin + brite
 
 ## 真偽
 
-真(true)か偽(false)かを示すものがあります。
+真(true)か偽(false)かを示すものがあります。第3章の条件分岐で利用します。
 
 ```ruby
 puts true
