--- a/3-3.処理の保存.md
+++ b/3-3.処理の保存.md
@@ -1,4 +1,6 @@
-# 関数、メソッド
+# 処理の保存
+
+## 関数、サブルーチン、メソッド
 
 プログラミングでは処理にすら名前を付けることができます。これも肝です。
 
@@ -8,17 +10,23 @@ def plus_katekin_power(x)
 end
 ```
 
-`def`とは`define`の略で「定義」を意味します。処理に名前を付けることは「処理を定義する」とも解釈できます。
+`def`とは`define`の略で、「定義」を意味します。処理に名前を付けることは「処理を定義する」とも解釈できます。
 
-名前の付いた処理を**関数**や**サブルーチン**といったりします。関数は数学っぽいので、Rubyを含めたいくつか言語では**メソッド**と呼ばれたりします。ここでは関数と呼ばせてください。
+名前の付いた処理を**関数**や**サブルーチン**といったりします。関数という名前は数学寄りすぎるため、Rubyを含めたいくつか言語では「操作」という意味で**メソッド**と呼ばれたりします。ここでは関数と呼ばせてください。(界隈では文脈で言葉を使い分けたりします)
 
-しばしば関数は何かしらの値を受け取ります。受け取った値を利用することで処理にバリエーションが生まれます。
+関数の定義方法を理解するため、関数の性質について説明します。
 
-上の関数`plus_katekin_power`では、値を一つ受け取り、それが`x`に代入されます。xのような、値を受け取る変数を **引数(ひきすう)** といいます。
+関数は名前の付いた処理のことだと説明しましたが、本質は「**何かしらの値を受け取って処理し、その結果を返す**」という性質です。
 
-関数を以下のように**呼び出す**と、字下げのところが実行されます。
+簡単に言うと、**入力** → 処理 → **出力** という流れが本質であるということです。
 
-そして、最後の処理結果が**返されます**。返される値は**戻り値**といいます。
+入力として受け取った値を利用することで、出力にバリエーションが生まれます。
+
+上の関数`plus_katekin_power`では、入力として値を一つ受け取り、まずそれが`x`に代入されます。xのような、入力が代入される変数を **引数(ひきすう)** といいます。
+
+関数に値を渡して処理することを「関数の**呼び出し**」といい、呼び出すと字下げのところが実行されます。
+
+そして、最後の処理結果が返されます。出力として返される値は**戻り値**といいます。
 
 ```ruby
 def plus_katekin_power(x)
@@ -26,6 +34,6 @@ def plus_katekin_power(x)
 end
 
 brite = 717
-power = plus_katekin_power(brite) # 関数の「呼び出し」
+power = plus_katekin_power(brite) # 関数の呼び出し
 puts power
 ```
