メモリのコラム追加

--- a/2-3.値の保存.md
+++ b/2-3.値の保存.md
@@ -23,9 +23,15 @@ puts x
 
 `katekin ← 7000 + 586`
 
-こういうふうに**名付ける**ことによってデータを**メモリに保存**します。
+こういうふうに**名付ける**ことによって値を**メモリに保存**します。
 
-この`katekin`と`brite`はそれぞれどういう値だと思いますか？また、後に出てくる`x`はどういう値だと思いますか？
+**メモリ**とは、**一時的に**データを保存する領域のことです。複雑な計算結果などを保存しておくことで、それを利用すれば再度計算する必要が無くなり、効率的に処理できます。
+
+プログラムが終了するとメモリに保存したデータは消えます。HDDやSSDなどのストレージと違うところは、長期保存ができない代わりにアクセス速度が**めちゃくちゃ高速**なところです。
+
+## どんな値が入っているでしょう？
+
+上のプログラムの`katekin`と`brite`はそれぞれどういう値だと思いますか？また、後に出てくる`x`はどういう値だと思いますか？
 
 (こんぺいとうコメント: 実行する前に考えて、当たってたら嬉しい気がする。)
 
@@ -40,4 +46,13 @@ puts x
 katekin = 7000 + 586
 ```
 
-(こんぺいとうコメント: 変数への代入(メモリへの保存)は結構プログラミングの肝なんですよねぇ)
+---
+
+#### コラム - PCの性能
+
+メモリがPCの性能に関わることは知っていると思いますが、なぜ性能に関わるのかというとアクセス速度がめちゃくちゃ速い領域に多くのデータを入れられるとそれだけ多くの処理を速くこなすことができるからです(小泉進次郎構文)。
+
+#### コラム2 - PCの再起動で調子が戻る理由
+
+メモリはめちゃくちゃ重要なので、コラムを二つ書くンゴ…。
+よくPCを再起動するとバグが直ることがありますね。これの主な目的は、一時的に保存したデータを一旦削除するという操作です。バグが起こるよくある原因の一つとして、想定していない操作や動作によって、メモリに想定外のデータが保存されてしまったというものがあります。そういった場合は想定した動きに戻すためにメモリをリセットするという操作が必要になります。
