--- a/3-3.処理の保存.md
+++ b/3-3.処理の保存.md
@@ -1,5 +1,7 @@
 # 処理の保存
 
+ここは結構難しいので時間をかけて取り組みましょう。
+
 ## 関数、サブルーチン、メソッド
 
 プログラミングでは処理にすら名前を付けることができます。これも肝です。
@@ -12,19 +14,50 @@ end
 
 `def`とは`define`の略で、「定義」を意味します。処理に名前を付けることは「処理を定義する」とも解釈できます。
 
-名前の付いた処理を**関数**や**サブルーチン**といったりします。関数という名前は数学寄りすぎるため、Rubyを含めたいくつか言語では「操作」という意味で**メソッド**と呼ばれたりします。ここでは関数と呼ばせてください。(界隈では文脈で言葉を使い分けたりします)
+名前の付いた処理は**関数**や**サブルーチン**、**メソッド**などと呼ばれたりします。大体意味は同じなので、ここでは関数と呼ばせてください。(界隈では文脈で言葉を使い分けます)
 
-関数の定義方法を理解するため、関数の性質について説明します。
+関数の定義方法を理解するため、関数の**呼び出し**と関数の性質について説明します。
 
-関数は名前の付いた処理のことだと説明しましたが、本質は「**何かしらの値を受け取って処理し、その結果を返す**」という性質です。
+## 関数の呼び出し
+
+下で`plus_katekin_power`という**名前の付いた**処理の横の**カッコに値を入れました**。
+
+これが「関数の**呼び出し**」です。**文章的に**どういった処理がされると思いますか？
+
+```ruby
+plus_katekin_power(100)
+```
+
+「100にカテキンパワーがプラスされるんだろうなぁ」と思ったのならとても良い感じです。
+
+## 関数の性質
+
+関数は「名前の付いた処理」のことだと説明しましたが、本質は「**何かしらの値を受け取って処理し、その結果を返す**」という性質です。
 
 簡単に言うと、**入力** → 処理 → **出力** という流れが本質であるということです。
 
-入力として受け取った値を利用することで、出力にバリエーションが生まれます。
+## 処理の流れ
+
+```ruby
+def plus_katekin_power(x)
+  x + 7586
+end
+```
 
 上の関数`plus_katekin_power`では、入力として値を一つ受け取り、まずそれが`x`に代入されます。xのような、入力が代入される変数を **引数(ひきすう)** といいます。
 
 関数に値を渡して処理することを「関数の**呼び出し**」といい、呼び出すと字下げのところが実行されます。
+
+```ruby
+plus_katekin_power(100) # カッコ内に値を入れることで関数を呼び出す
+```
+
+↓ 処理の流れとしてはこうなる
+
+```ruby
+x = 100
+x + 7586
+```
 
 そして、最後の処理結果が返されます。出力として返される値は**戻り値**といいます。
 
@@ -37,3 +70,5 @@ brite = 717
 power = plus_katekin_power(brite) # 関数の呼び出し
 puts power
 ```
+
+変数`power`の値はどんな値だと思いますか？
