--- a/0.作りたいもの.md
+++ b/0.作りたいもの.md
@@ -22,9 +22,9 @@
 4. トップ5までのクリップをつなげる。
 5. 投稿する。
 
-そんな感じのものを作ります。
+ということが実現できるものを作ります。
 
-一人でも開発できるけどみんなにもプログラミングに触れてほしいみたいなところがあります。
+一人でも開発できますが、せっかくならみんなにもプログラミングに触れてみてほしいです。
 
 ## 開発言語
 Ruby
@@ -36,6 +36,6 @@ Ruby
 * Twitterの開発にもともと使われていたくらい良い言語
 
 ### なぜRuby
-* (他のプログラミングと比べて)入門時には意味不明な概念や記述が少ないので退屈しにくい。
+* (他のプログラミングと比べて)初心者にとって意味がわかりづらい概念や記述が少ないので退屈しにくい。
 * 日本語での情報が多い。
 * 数学っぽさが少ないので多分親しみやすい。
