--- a/1-1.コンピュータの歴史.md
+++ b/1-1.コンピュータの歴史.md
@@ -6,7 +6,7 @@
 
 もともとは高速な計算をする目的で開発されました。
 
-↓昔のクソでかコンピュータ。メモリはわずかしかない。
+以下は昔のクソでかコンピュータです。メモリはわずかありませんでした。
 
 * Colossus(コロッサス) - **暗号解読**. 1944年
 <img src="images/Colossus.jpg">
@@ -23,10 +23,10 @@
 
 ## 3. 数以外も扱う
 
-昔のコンピュータは計算がメインでしたが、利便性を高めるため、文字、色などの数値以外もデータ化し、扱えるようになりました。
+昔のコンピュータは計算がメインでしたが、ビジネスや研究などで利便性を高めるため、文字、色などの数値以外もデータ化し、扱えるようになりました。
 
 ---
 
-第2章では、単純な計算、値の保存、数値以外の値を体験します。
+第2章では、単純な計算、値の保存、数値以外の値を使ってみます。
 
 第3章では、上記のコンピュータの高速な計算を支えた仕組みであるプログラミングの肝(条件、繰り返し、サブルーチン)を体験します。
