--- a/3-4.値の集まり.md
+++ b/3-4.値の集まり.md
@@ -76,4 +76,4 @@ end
 
 #### コラム - 3-2.繰り返しで出てきた`1..3`の正体
 
-`1..3`は、**範囲**を示すオブジェクトで、これも値の集まりの一つです。`1..3`は1から3の範囲を集めたものですが配列や連想配列と違い、メモリを食わないところが優れています。
+`1..3`は、**範囲**を示すもので、これも値の集まりの一つです。`1..3`は1から3の範囲を集めたものですが配列や連想配列と違い、メモリを食わないところが優れています。
