--- a/3-4.値の集まり.md
+++ b/3-4.値の集まり.md
@@ -44,16 +44,18 @@ ids = {"katekin" => 7586, "brite" => 717, "vitamin" => 1137}
 puts ids["katekin"]
 ```
 
-`{キー => 値}`という形式でまとめられる連想配列は`[]`の中に**キー**を指定することでそれに対応する**値**を取得することができます。
+`{キー => 値}`という形式で**キー**とそこから連想される**値**をまとめます。上の例では、`"katekin"`から連想されるのは`7586`, `"vitamin"`から連想されるのは`1137`, ...です。
 
-キーには文字列以外にも数値なども指定できますが、Rubyでは**キーワード**という形の値がキーとして良く使われます。
+ただの配列では値を取得する際に番号を使っていましたが、連想配列では`[]`の中に**キー**を指定することでそこから連想される**値**を取得することができます。
+
+キーには文字列以外にも数値なども指定できますが、Rubyでは**キーワード**という形の値がキーとしてよく使われます。
 
 ```ruby
 ids = {:katekin => 7586, :brite => 717, :vitamin => 1137}
 puts ids[:katekin]
 ```
 
-キーワードを使う場合は以下のような形でも連想配列を作れます。
+キーワードを使う場合は以下のような簡単な形で連想配列を作ることができます。
 
 ```ruby
 ids = {katekin: 7586, brite: 717, vitamin: 1137}
@@ -68,7 +70,7 @@ puts ids[:vitamin]
 ```ruby
 ids = {:katekin => 7586, :brite => 717, :vitamin => 1137}
 for key, value in ids
-  puts keys, value
+  puts key, value
 end
 ```
 
