入門部2への移動

--- a/4.おわりに.md
+++ b/4.おわりに.md
@@ -8,4 +8,6 @@
 
 第4章では、解説しきれなったところを解説してるサイトを紹介しておきます。評判がわりといいやつです。
 
-また、宿題的なのも載せます。
+入門部2も作りました。
+
+https://r3dx-creative.github.io/programming-introduction2/
